# reachy-chat

./: .gitignore  CLAUDE.md  README.md  config.toml  index.html  pyproject.toml  style.css
.claude/: settings.local.json
docs/: index.html  voice-pipeline.drawio
prompts/: 00-default.md  10-location.md  20-tools.md  30-demo.md
reachy_chat/: config.py  gemini.py  gemini_realtime.py  main.py  openai_realtime.py  prefetch.py  realtime.py  timers.py
