[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-chat"
version = "0.1.0"
description = "AI-enabled chat assistant for the Reachy Mini Wireless."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "John Kalbac" }]
dependencies = [
    "reachy-mini",
    "numpy",
    "scipy",
    "onnxruntime",
    "requests",
    "tqdm",
    # openwakeword is intentionally NOT listed: its setup pins tflite-runtime,
    # which has no wheel for Python 3.12 on aarch64 (the daemon's apps venv).
    # Install it separately with --no-deps; we use the ONNX backend.
]

[project.entry-points."reachy_mini_apps"]
reachy-chat = "reachy_chat.main:ReachyChat"

[tool.setuptools.packages.find]
include = ["reachy_chat*"]
